--- a/src/main/webapp/app/valintatapajono/hakijaryhmaValintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/hakijaryhmaValintatapajono.html
@@ -50,7 +50,7 @@
             {{ t('hakijaryhmavalintatapajono.liita') || 'Liitä' }}
         </button>
 
-        <button class="button small float-left margin-right-2" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="{{ t('hakijaryhmavalintatapajono.muista') || 'Muista tallentaa muutoksesi' }}">{{ t('hakijaryhmavalintatapajono.takaisin') || 'Takaisin' }}</button>
+        <button class="button small float-left margin-right-2" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="{{ t('common.muista') || 'Muista tallentaa muutoksesi' }}">{{ t('common.takaisin') || 'Takaisin' }}</button>
     </div>
 </form>
 </div>
