--- a/src/main/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/valintatapajono.html
@@ -262,11 +262,11 @@
 </div>
 
 <div class="clear"></div>
-<button class="btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="{{ t('valintatapajono.muista') || 'Muista tallentaa muutoksesi' }}"><i class="fa fa-arrow-left"></i> {{ t('valintatapajono.takaisin') || 'Takaisin' }}
+<button class="btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="{{ t('common.muista') || 'Muista tallentaa muutoksesi' }}"><i class="fa fa-arrow-left"></i> {{ t('common.takaisin') || 'Takaisin' }}
 </button>
 <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i
         class="fa fa-floppy-o"></i>
-    {{ t('valintatapajono.tallenna') || 'Tallenna' }}
+    {{ t('common.tallenna') || 'Tallenna' }}
 </button>
 
 <div class="clear"></div>
