--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -176,12 +176,12 @@
 
 
 <div class="col-md-12">
-    <button type="button" class="float-left margin-right-1 btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="{{ t('valintaryhmalomake.muista') || 'Muista tallentaa muutoksesi' }}"><i
-            class="fa fa-arrow-left"></i> {{ t('valintaryhmalomake.takaisin') || 'Takaisin' }}
+    <button type="button" class="float-left margin-right-1 btn btn-sm btn-default" ng-click="cancel()" popover-popup-delay="500" popover-placement="top" popover-trigger="mouseenter" popover="{{ t('common.muista') || 'Muista tallentaa muutoksesi' }}"><i
+            class="fa fa-arrow-left"></i> {{ t('common.takaisin') || 'Takaisin' }}
     </button>
     <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i
             class="fa fa-floppy-o"></i>
-        {{ t('valintaryhmalomake.tallenna') || 'Tallenna' }}
+        {{ t('common.tallenna') || 'Tallenna' }}
     </button>
 
 </div>
