--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavalomake.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavalomake.html
@@ -1,11 +1,11 @@
 <!-- LASKENTAKAAVAPAGE CONTENT -->
-<h1>Laskentakaavan muokkaus</h1>
+<h1>{{ t('laskentakaavalomake.header') || 'Laskentakaavan muokkaus' }}</h1>
 
 
 <div class="tabs">
-    <a href="#/etusivu" class="tab"><span>Valintaryhmät ja hakukohteet</span></a>
-    <a href="#/laskentakaava" class="tab current"><span>Laskentakaavat</span></a>
-    <a auth="crudOph" href="#/import" class="tab float-right"><span>Yhteisvalinnan hallinta</span></a>
+    <a href="#/etusivu" class="tab"><span>{{ t('common.etusivu') || 'Valintaryhmät ja hakukohteet' }}</span></a>
+    <a href="#/laskentakaava" class="tab current"><span>{{ t('common.laskentakaava') || 'Laskentakaavat' }}</span></a>
+    <a auth="crudOph" href="#/import" class="tab float-right"><span>{{ t('common.import') || 'Yhteisvalinnan hallinta' }}</span></a>
 </div>
 
 <div class="tabsheets">
